--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./Style/index.css">
   <title>Frontend Mentor | Article preview component</title>
 </head>
@@ -31,7 +34,7 @@
             <h2> Michelle Appleton</h2>
             <p>28 Jun 2020</p>
           </span>
-          <div class="circle"><img class="img3" src="./images/icon-share.svg">
+          <div class="circle"><i class="fa-solid fa-share"></i>
             <div class="popup hide" id="popup">
               <div class="flexbox">
                 <h3>share</h3>
