--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
           it felt slightly bare and uninviting. I’ve got some simple tips
           to help you make any room feel complete.</p>
         <div class="bottom-card">
-          <img class="img2" src="./images/avatar-michelle.jpg">
-          <span>
+          <img class="img2" alt="michelle" src="./images/avatar-michelle.jpg">
+          <div class="txt1">
             <h2> Michelle Appleton</h2>
             <p>28 Jun 2020</p>
-          </span>
+          </div>
           <div class="circle"><i class="fa-solid fa-share"></i>
             <div class="popup hide" id="popup">
               <div class="flexbox">
                 <h3>share</h3>
-                <img class="img4" src="./images/icon-facebook.svg">
-                <img class="img5" src="./images/icon-twitter.svg">
-                <img class="img6" src="./images/icon-pinterest.svg">
+                <img class="img4" alt="fb" src="./images/icon-facebook.svg">
+                <img class="img5" alt="tw" src="./images/icon-twitter.svg">
+                <img class="img6" alt="pint" src="./images/icon-pinterest.svg">
               </div>
             </div>
           </div>
